Import of KRYDE/Math-OEIS-3 from CPAN.
gitpan-cpan-distribution: Math-OEIS
gitpan-cpan-version:      3
gitpan-cpan-path:         KRYDE/Math-OEIS-3.tar.gz
gitpan-cpan-author:       KRYDE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -16,6 +16,10 @@ You should have received a copy of the GNU General Public License along
 with Math-OEIS.  If not, see <http://www.gnu.org/licenses/>.
 
 
+Version 3, July 2014
+    - Grep fix for "name" parameter usage,
+      better handling of bignums in halving/doubling attempts
+
 Version 2, June 2014
     - fix for Stripped anum_to_values()
 
