Import of KRYDE/Math-OEIS-5 from CPAN.
gitpan-cpan-distribution: Math-OEIS
gitpan-cpan-version:      5
gitpan-cpan-path:         KRYDE/Math-OEIS-5.tar.gz
gitpan-cpan-author:       KRYDE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -17,6 +17,9 @@ with Math-OEIS.  If not, see <http://www.gnu.org/licenses/>.
 
 
 
+Version 5, August 2014
+    - Grep fix print when match reaches end of stripped line
+
 Version 4, July 2014
     - Grep better message on no stripped file,
       stringize bigints as a workaround for Math::BigInt::GMP bug,
